--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,7 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug",
-            "executable": "/Users/chris/Documents/Platformio/Projects/Heizung_DS18B20_MQTT esp32/.pio/build/nodemcuv2/firmware.elf",
+            "executable": "/Users/chris/Documents/Platformio/Projects/heizung/.pio/build/nodemcuv2/firmware.elf",
             "projectEnvName": "nodemcuv2",
             "toolchainBinDir": "/Users/chris/.platformio/packages/toolchain-xtensa32/bin",
             "internalConsoleOptions": "openOnSessionStart",
@@ -25,7 +25,7 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug (skip Pre-Debug)",
-            "executable": "/Users/chris/Documents/Platformio/Projects/Heizung_DS18B20_MQTT esp32/.pio/build/nodemcuv2/firmware.elf",
+            "executable": "/Users/chris/Documents/Platformio/Projects/heizung/.pio/build/nodemcuv2/firmware.elf",
             "projectEnvName": "nodemcuv2",
             "toolchainBinDir": "/Users/chris/.platformio/packages/toolchain-xtensa32/bin",
             "internalConsoleOptions": "openOnSessionStart"
@@ -34,7 +34,7 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug (without uploading)",
-            "executable": "/Users/chris/Documents/Platformio/Projects/Heizung_DS18B20_MQTT esp32/.pio/build/nodemcuv2/firmware.elf",
+            "executable": "/Users/chris/Documents/Platformio/Projects/heizung/.pio/build/nodemcuv2/firmware.elf",
             "projectEnvName": "nodemcuv2",
             "toolchainBinDir": "/Users/chris/.platformio/packages/toolchain-xtensa32/bin",
             "internalConsoleOptions": "openOnSessionStart",
